<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContentProvider</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="insert">插入</string>
    <string name="query">查询</string>
    <string name="querys">查询所有数据</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>    

</resources>
